fix lettura qrcode